--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -5,19 +5,17 @@ owner: BBR
 
 This topic describes how to install BOSH Backup and Restore (BBR).
 
-To install BBR, you copy the `bbr` executable to a jumpbox. 
+To use BBR, you must be able to connect to a VM on the BOSH internal network so BBR can access your BOSH deployment or BOSH Director.
 
-Once installed on your jumpbox, you can run `bbr` commands to back up and restore your BOSH deployment or BOSH Director.
+Usually, this VM is a jumpbox deployment, from which you can run BBR commands.
 
 For more information, see [Backing up with BOSH Backup and Restore](backup.html) and [Restoring with BOSH Backup and Restore](restore.html).
 
 ##<a id="prerequisites"></a> Prerequisite
 
-You must have a jumpbox before you can install BBR to the jumpbox. A jumpbox is a separate, 
-hardened server on your network that provides a controlled means of access to the VMs other 
-computers on your network.
+A jumpbox is a separate, hardened VM on your network that provides a controlled means of access to the VMs other computers on your network.
 
-See the [jumpbox-deployment](https://github.com/cloudfoundry/jumpbox-deployment) GitHub repository for an example jumpbox deployment.
+For an example jumpbox deployment, see the [jumpbox-deployment](https://github.com/cloudfoundry/jumpbox-deployment) GitHub repository.
 
 ##<a id="jumpbox-setup"></a> Step 1: Configure Your Jumpbox
 
@@ -25,7 +23,7 @@ Configure your jumpbox to meet the following requirements:
 
 * Your jumpbox must be able to communicate with the network that contains your BOSH deployment.
 * Your jumpbox must have sufficient space for the backup. <%= vars.bbr_space %>
-* Your jumpbox must be in the same network as the deployed VMs because BBR connects to the VMs at their private IP addresses. BBR does not support SSH gateways.
+* Your jumpbox must be in the same network as the deployed VMs because BBR connects to the VMs at their private IP addresses.
 * BBR copies the backed-up data from the VMs to the jumpbox, so you should have minimal network latency between the VMs and the jumpbox to reduce transfer times.
 
 Consult the following table for more information about the network access permissions required by BBR.
@@ -55,7 +53,7 @@ Consult the following table for more information about the network access permis
 
 ## <a id='scp'></a>Step 2: Transfer BBR to Your Jumpbox
 
-Perform the following steps to transfer the `bbr` binary to your jumpbox:
+If you choose to run your BBR command from the jumpbox, perform the following steps to transfer the `bbr` binary to your jumpbox:
 
 1. Download the latest BBR release from the
 [bosh-backup-and-restore](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases) GitHub repository.
