--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -5,17 +5,21 @@ owner: BBR
 
 This topic describes how to install BOSH Backup and Restore (BBR).
 
-To use BBR, you must be able to connect to a VM on the BOSH internal network so BBR can access your BOSH deployment or BOSH Director.
+To use BBR, you must be able to connect to a VM on the BOSH internal network so
+that BBR can access your BOSH deployment or BOSH Director.
 
 Usually, this VM is a jumpbox deployment, from which you can run BBR commands.
 
-For more information, see [Backing up with BOSH Backup and Restore](backup.html) and [Restoring with BOSH Backup and Restore](restore.html).
+For more information, see [Backing up with BOSH Backup and Restore](backup.html)
+and [Restoring with BOSH Backup and Restore](restore.html).
 
 ##<a id="prerequisites"></a> Prerequisite
 
-A jumpbox is a separate, hardened VM on your network that provides a controlled means of access to the VMs other computers on your network.
+A jumpbox is a separate, hardened VM on your network that provides a controlled
+means of access to the VMs other computers on your network.
 
-For an example jumpbox deployment, see the [jumpbox-deployment](https://github.com/cloudfoundry/jumpbox-deployment) GitHub repository.
+For an example jumpbox deployment, see the
+[jumpbox-deployment](https://github.com/cloudfoundry/jumpbox-deployment) GitHub repository.
 
 ##<a id="jumpbox-setup"></a> Step 1: Configure Your Jumpbox
 
@@ -53,7 +57,8 @@ Consult the following table for more information about the network access permis
 
 ## <a id='scp'></a>Step 2: Transfer BBR to Your Jumpbox
 
-If you choose to run your BBR command from the jumpbox, perform the following steps to transfer the `bbr` binary to your jumpbox:
+If you choose to run your BBR command from the jumpbox, perform the following
+steps to transfer the `bbr` binary to your jumpbox:
 
 1. Download the latest BBR release from the
 [bosh-backup-and-restore](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases) GitHub repository.
