--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -17,16 +17,17 @@ For information, see [Compatibility of Restore](./restore.html#compatibility).
 
 ## <a id='connect-to-jumpbox'></a> Connect to Your Jumpbox
 
-To back up a BOSH Director or BOSH deployment using BBR, you need to establish a connection to your jumpbox in one of the following ways:
+To back up a BOSH Director or BOSH deployment using BBR, you need to establish a
+connection to your jumpbox in one of the following ways:
 
-* [Connect with SSH](#ssh)
-* [Connect with BOSH_ALL_PROXY](#bosh-all-proxy)
+* [Option 1: Connect with SSH](#ssh)
+* [Option 2: Connect with BOSH\_ALL\_PROXY](#bosh-all-proxy)
 
-For general information about the jumpbox, see [Installing BOSH Backup and Restore](installing.html).
+For more information about the jumpbox, see [Installing BOSH Backup and Restore](installing.html).
 
-### <a id='ssh'></a> Connect with SSH
+### <a id='ssh'></a> Option 1: Connect with SSH
 
-To connect to your jumpbox through the CLI, perform the following command using SSH:
+To connect to your jumpbox using the CLI, run the following command:
 
 ```
 ssh -i LOCAL-PATH-TO-JUMPBOX-PRIVATE-KEY JUMPBOX-USER@JUMPBOX-ADDRESS
@@ -34,27 +35,27 @@ ssh -i LOCAL-PATH-TO-JUMPBOX-PRIVATE-KEY JUMPBOX-USER@JUMPBOX-ADDRESS
 
 Where:
 
-  * `LOCAL-PATH-TO-JUMPBOX-PRIVATE-KEY`  is the local path to your private key file for the jumpbox host.
+  * `LOCAL-PATH-TO-JUMPBOX-PRIVATE-KEY` is the local path to your private key file for the jumpbox host.
   * `JUMPBOX-USER` is your jumpbox username.
   * `JUMPBOX-ADDRESS` is the IP address of your jumpbox.
 
-<p class="note"><strong>Note</strong>: If you connect to your jumpbox with SSH, you must run the BBR commands
-  in the following sections from within your jumpbox.
+<p class="note"><strong>Note</strong>: If you connect to your jumpbox with SSH,
+   you must run the BBR commands in this topic from within your jumpbox.
 </p>
 
 
-### <a id='bosh-all-proxy'></a> Connect with BOSH&#95;ALL&#95;PROXY
+### <a id='bosh-all-proxy'></a> Option 2: Connect with BOSH&#95;ALL&#95;PROXY
 
-Set and use `BOSH_ALL_PROXY`. Using `BOSH_ALL_PROXY` opens an SSH tunnel with SOCKS5 to the jumpbox.
+Using `BOSH_ALL_PROXY` opens an SSH tunnel with SOCKS5 to the jumpbox.
 This tunnel enables you to forward requests to the BOSH Director through the jumpbox from your local machine.
-When the environment variable `BOSH_ALL_PROXY` is set, the BBR cli will always utilise its value to forward
+When the environment variable `BOSH_ALL_PROXY` is set, the BBR CLI uses its value to forward
 requests to the BOSH Director.
 
-Use one of the following methods to create the tunnel:
+Use one of the following methods to create the tunnel.
 
-* **Tunnel established separately**:
+**To establish the tunnel separately, do the following:**
 
-  1. To establish the tunnel and make it available on a local port, run the following command:
+  1. Establish the tunnel and make it available on a local port by running the following command:
 
     ```
     ssh -4 -D SOCKS-PORT -fNC JUMPBOX@JUMPBOX-IP -i JUMPBOX-KEY-FILE -o ServerAliveInterval=60
@@ -66,39 +67,43 @@ Use one of the following methods to create the tunnel:
     * `JUMPBOX-IP` is the IP address of the jumpbox.
     * `JUMPBOX-KEY-FILE` is the local SSH private key for accessing the jumpbox.
 
-  1. To provide the BOSH CLI with access to the tunnel through use of the `BOSH_ALL_PROXY` environment variable,
-  run the following command:
+  1. Provide the BOSH CLI with access to the tunnel using the `BOSH_ALL_PROXY` environment variable by
+  running the following command:
 
     ```
     export BOSH_ALL_PROXY=socks5://localhost:SOCKS-PORT
     ```
 
-* **Tunnel created by BOSH CLI**: To provide the BOSH CLI with the SSH credentials it needs to create the
-tunnel, run the following command:
+**To enable the BOSH CLI to create the tunnel, do the following:**
 
-    ```
-    export BOSH_ALL_PROXY=ssh+socks5://JUMPBOX@JUMPBOX-IP:SOCKS-PORT?private_key=JUMPBOX-KEY-FILE
-    ```
+Provide the BOSH CLI with the SSH credentials it needs to create the tunnel by
+running the following command:
 
-    Where:
-    * `JUMPBOX` is the name of your jumpbox.
-    * `JUMPBOX-IP` is the IP address of the jumpbox.
-    * `SOCKS-PORT` is the local SOCKS port.
-    * `JUMPBOX-KEY-FILE` is the local SSH private key for accessing the jumpbox.
+```
+export BOSH_ALL_PROXY=ssh+socks5://JUMPBOX@JUMPBOX-IP:SOCKS-PORT?private_key=JUMPBOX-KEY-FILE
+```
+
+  Where:
+
+  * `JUMPBOX` is the name of your jumpbox.
+  * `JUMPBOX-IP` is the IP address of the jumpbox.
+  * `SOCKS-PORT` is the local SOCKS port.
+  * `JUMPBOX-KEY-FILE` is the local SSH private key for accessing the jumpbox.
 
 
-<p class="note"><strong>Note</strong>: Ensure the SOCKS port is not already in use by a different tunnel/process.
+<p class="note"><strong>Note</strong>:
+  Ensure the SOCKS port is not already in use by a different tunnel or process.
 </p>
 
 <p class="note"><strong>Note</strong>: Using <code>BOSH_ALL_PROXY</code> can result in longer
-backup and restore times due to network performance degradation. Because all operations must pass
-through the proxy, moving backup artifacts can be significantly slower.
+backup and restore times due to network performance degradation. All operations must pass
+through the proxy, therefore,  moving backup artifacts can be significantly slower.
 </p>
 
 <div class="note warning"><strong>Warning:</strong>
-Prior to version <a href="https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases/tag/v1.5.1">v1.5.1</a>
-of the BBR cli, the tunnel created by the BOSH cli did not include the necessary <code>ServerAliveInterval</code> flag.
-This may result in your SSH connection timing out when transferring large artifacts.
+In the BBR CLI <a href="https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases/tag/v1.5.1">v1.5.1</a>
+and earlier, the tunnel created by the BOSH CLI does not include the <code>ServerAliveInterval</code> flag.
+This might cause your SSH connection to time out when transferring large artifacts.
 </div>
 
 ## <a id='back-up-director'></a> Back up a BOSH Director
@@ -129,7 +134,7 @@ This may result in your SSH connection timing out when transferring large artifa
     </pre>
 
 1. If the pre-check command fails, do the following:
-   * Run the command again adding the `--debug` flag to enable debug logs. 
+   * Run the command again adding the `--debug` flag to enable debug logs.
      For more information, see [BBR Logging](logging.html).
    * Make the fix suggested in the output and run the pre-backup check again.<br>
      For example, the command fails if the BOSH Director selected did not have the correct backup scripts or if the connection to the BOSH Director failed.
@@ -161,7 +166,7 @@ This may result in your SSH connection timing out when transferring large artifa
 
 1. If the backup command completes successfully, follow the steps in [Manage Your Backup Artifact](#good-practices) below.
 
-1. If the backup command fails, do the following: 
+1. If the backup command fails, do the following:
    * Run the command again adding the `--debug` flag to enable debug logs.<br>
      For more information, see [BBR Logging](logging.html).
    * Follow the steps in [Recover from a Failing Command](#recovering-from-failing-command).
@@ -187,7 +192,7 @@ This may result in your SSH connection timing out when transferring large artifa
     * `BOSH-CLIENT`: If you have a BOSH Director with User Account and Authentication (UAA) as the
     authentication provider, this is a UAA client as the username.
     If you have a BOSH Director with basic auth configured, this is your username.
-    * `DEPLOYMENT-NAME`: The name of the deployment you want to back up. For a list of deployments, 
+    * `DEPLOYMENT-NAME`: The name of the deployment you want to back up. For a list of deployments,
     run `bosh deployments`.
     * `PATH-TO-BOSH-CA-CERTIFICATE`: The path to the BOSH Director's Certificate Authority (CA)
     certificate, if the certificate is not verifiable by the local machine's certificate chain. If you manually deployed,
@@ -229,7 +234,7 @@ This may result in your SSH connection timing out when transferring large artifa
     as the authentication provider, this is a UAA client secret as the password.
     If you have a BOSH Director with basic auth configured, this is your password.
     * `BOSH-TARGET`: The FQDN or IP address of your BOSH Director.
-    * `BOSH-CLIENT`: If you have a BOSH Director with User Account and Authentication (UAA) as the 
+    * `BOSH-CLIENT`: If you have a BOSH Director with User Account and Authentication (UAA) as the
     authentication provider, this is a UAA client as the username.
     If you have a BOSH Director with basic auth configured, this is your username.
     * `DEPLOYMENT-NAME`: The name of the deployment you want to back up. For a list of deployments,
@@ -252,19 +257,19 @@ This may result in your SSH connection timing out when transferring large artifa
 
     <p class="note"><strong>Note</strong>: The BBR backup command can take a long time to complete.
     You can run it independently of the SSH session so that the process can continue running even
-    if your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you can 
+    if your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you can
     run the command in a <code>screen</code> or <code>tmux</code> session instead.</p>
 
 1. If the command completes successfully, follow the steps in [What To Do with Your Backup Artifact](#what-to-do-with-artifact) below.
 
 1. If the backup command fails, do the following:
-   + Run the command again adding the `--debug` flag to enable debug logs. 
+   + Run the command again adding the `--debug` flag to enable debug logs.
      For more information, see [BBR Logging](logging.html).
    + Follow the steps in [Recover from a Failing Command](#recovering-from-failing-command).
 
 ## <a id="recovering-from-failing-command"></a>Recover from a Failing Command
 
-If the backup fails for the BOSH Director or deployment, follow these steps: 
+If the backup fails for the BOSH Director or deployment, follow these steps:
 
 1. Ensure that you set all the parameters in the command.
 1. Ensure the BOSH Director credentials are valid.
@@ -286,7 +291,7 @@ or that your developers need to push an app in a hurry, follow these steps:
 
 ## <a id="manual-clean"></a>Clean up after a Failed Backup
 
-If your backup process fails, it might leave the BBR backup folder on the instance, causing any 
+If your backup process fails, it might leave the BBR backup folder on the instance, causing any
 subsequent attempts to backup to fail. In addition, BBR might not have run the post-backup scripts, leaving the instance in a locked state.
 
 Follow the steps below to use the BBR cleanup script after a failed backup attempt.
