--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -51,44 +51,42 @@ This tunnel enables you to forward requests to the BOSH Director through the jum
 When the environment variable `BOSH_ALL_PROXY` is set, the BBR CLI uses its value to forward
 requests to the BOSH Director.
 
-Use one of the following methods to create the tunnel.
+There are two options that you can use to create the tunnel.
 
-**To establish the tunnel separately, do the following:**
-
+* **To establish the tunnel separately, do the following:**<br><br>
   1. Establish the tunnel and make it available on a local port by running the following command:
 
-    ```
-    ssh -4 -D SOCKS-PORT -fNC JUMPBOX@JUMPBOX-IP -i JUMPBOX-KEY-FILE -o ServerAliveInterval=60
-    ```
+        ```
+        ssh -4 -D SOCKS-PORT -fNC JUMPBOX@JUMPBOX-IP -i JUMPBOX-KEY-FILE -o ServerAliveInterval=60
+        ```
 
-    Where:
-    * `SOCKS-PORT` is the local SOCKS port.
-    * `JUMPBOX` is the name of your jumpbox.
-    * `JUMPBOX-IP` is the IP address of the jumpbox.
-    * `JUMPBOX-KEY-FILE` is the local SSH private key for accessing the jumpbox.
+        Where:
 
+      * `SOCKS-PORT` is the local SOCKS port.
+      * `JUMPBOX` is the name of your jumpbox.
+      * `JUMPBOX-IP` is the IP address of the jumpbox.
+      * `JUMPBOX-KEY-FILE` is the local SSH private key for accessing the jumpbox.
   1. Provide the BOSH CLI with access to the tunnel using the `BOSH_ALL_PROXY` environment variable by
   running the following command:
 
+        ```
+        export BOSH_ALL_PROXY=socks5://localhost:SOCKS-PORT
+        ```
+* **To enable the BOSH CLI to create the tunnel, do the following:**
+<br><br>
+    Provide the BOSH CLI with the SSH credentials it needs to create the tunnel by
+    running the following command:
+
     ```
-    export BOSH_ALL_PROXY=socks5://localhost:SOCKS-PORT
+    export BOSH_ALL_PROXY=ssh+socks5://JUMPBOX@JUMPBOX-IP:SOCKS-PORT?private_key=JUMPBOX-KEY-FILE
     ```
 
-**To enable the BOSH CLI to create the tunnel, do the following:**
+      Where:
 
-Provide the BOSH CLI with the SSH credentials it needs to create the tunnel by
-running the following command:
-
-```
-export BOSH_ALL_PROXY=ssh+socks5://JUMPBOX@JUMPBOX-IP:SOCKS-PORT?private_key=JUMPBOX-KEY-FILE
-```
-
-  Where:
-
-  * `JUMPBOX` is the name of your jumpbox.
-  * `JUMPBOX-IP` is the IP address of the jumpbox.
-  * `SOCKS-PORT` is the local SOCKS port.
-  * `JUMPBOX-KEY-FILE` is the local SSH private key for accessing the jumpbox.
+      * `JUMPBOX` is the name of your jumpbox.
+      * `JUMPBOX-IP` is the IP address of the jumpbox.
+      * `SOCKS-PORT` is the local SOCKS port.
+      * `JUMPBOX-KEY-FILE` is the local SSH private key for accessing the jumpbox.
 
 
 <p class="note"><strong>Note</strong>:
