Reduce overcomplicated release directory structure
[#166605032]

Signed-off-by: Emmanouil Kiagias <ekiagias@pivotal.io>

--- a/bbr-devguide.html.md.erb
+++ b/bbr-devguide.html.md.erb
@@ -83,20 +83,13 @@ acme-release
 │   │       ├── backup.sh.erb
 │   │       ├── config.json.erb
 │   │       └── restore.sh.erb
-│   ├── lock-unlock-acme
-│   │   ├── monit
-│   │   ├── spec
-│   │   └── templates
-│   │       ├── post-backup-unlock.sh.erb
-│   │       ├── pre-backup-lock.sh.erb
-│   │       └── metadata.sh.erb (optional)
-│   ├── lock-unlock-acme-interferer
-│   │   ├── monit
-│   │   ├── spec
-│   │   └── templates
-│   │       ├── post-backup-unlock.sh.erb
-│   │       ├── pre-backup-lock.sh.erb
-│   │       └── metadata.sh.erb (optional)
+│   └── lock-unlock-acme
+│       ├── monit
+│       ├── spec
+│       └── templates
+│           ├── post-backup-unlock.sh.erb
+│           ├── pre-backup-lock.sh.erb
+│           └── metadata.sh.erb (optional)
 ├── packages
 └── src
 ```
