--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -24,7 +24,7 @@ However, a BOSH deployment must have its backup and restore [scripts](#contract)
 <b>You can currently back up and restore the following BOSH deployments with BBR:</b>
 <%= vars.bbr_ert %>
 
-1. BOSH Director, including CredHub, with either Basic Auth or Client/Client-Secret UAA authentication
+1. The BOSH Director, including CredHub, with either Basic Auth or Client/Client-Secret UAA authentication
 
 1. Cloud Foundry with specific [configuration](cf-backup.html)
 
