--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -134,7 +134,7 @@ blobstores, see [Backup and Restore for External Blobstores](external-blobstores
 
 When BBR backs up and restores your Cloud Foundry blobstore, it includes droplets, buildpacks, and packages
 by default.
-You can choose to omit content in your blobstore from your backup and restore
+You can choose to omit specific blobstore content from your backup and restore
 using the following ops files:
 
 | Selective Backup Ops File                                                                                                                                                                                            | Content Included in Backup |
