Standardise cross reference [#167092775]

--- a/bbr-devguide.html.md.erb
+++ b/bbr-devguide.html.md.erb
@@ -550,6 +550,10 @@ class jobs/database-backup-restorer turquoise
 
 ## <a id='drats'></a>Acceptance Tests
 
-The **Disaster Recovery Acceptance Test Suite** (DRATs) runs against a Cloud Foundry deployment to ensure that backup and restore works as expected.
+The Disaster Recovery Acceptance Test Suite (DRATs) runs against a Cloud
+Foundry deployment to ensure that backup and restore works as expected.
 
-You can find further instructions to run DRATS, contribute and more examples [here](https://github.com/cloudfoundry-incubator/disaster-recovery-acceptance-tests).
+For more information and instructions for how to run DRATs, see
+[disaster-recovery-acceptance-tests](https://github.com/cloudfoundry-incubator/disaster-recovery-acceptance-tests)
+in GitHub.
+ 
