Drop bbr ops files table, refer to cf-deployment
The information about the ops files lives in the cf deployment repo.
This table was duplicating the information from the cf-deployment
backup and restore README file. Dropping the table and refering into the
cf-deployment removes the need to keep this information in sync between
two places.

[#163146026]

--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -36,88 +36,7 @@ enables BBR backup and restore for default CF components, including the internal
 
 When using the default configuration, all applications return to a running state after a restore.
 
-To enable BBR backup and restore for different configurations you must also use the appropriate backup and restore ops files as shown in this table:
-
-<table class="nice">
-  <tr>
-    <th>Configuration</th>
-    <th>Configuration Ops File</th>
-    <th>Backup and Restore Ops File</th>
-  </tr>
-  <tr>
-    <td>
-      A versioned S3-compatible external blobstore. For instructions, see <a href="external-blobstores.html#s3-versioned">Backup and Restore with External Blobstores</a>.
-    </td>
-    <td>
-      <code>use-s3-blobstore.yml</code>
-    </td>
-    <td>
-      <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-s3-versioned.yml">
-        <code>enable-backup-restore-s3-versioned.yml</code></a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      An un-versioned S3-compatible external blobstore. For instructions, see <a href="external-blobstores.html#s3-unversioned">Backup and Restore with External Blobstores</a>.
-    </td>
-    <td>
-      <code>use-s3-blobstore.yml</code>
-    </td>
-    <td>
-      <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-s3-unversioned.yml">
-        <code>enable-backup-restore-s3-unversioned.yml</code></a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      An Azure blobstore with soft delete enabled. For instructions, see <a href="external-blobstores.html#azure">Backup and Restore with External Blobstores</a>.
-    </td>
-    <td>
-      <code>use-azure-blobstore.yml</code>
-    </td>
-    <td>
-      <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-azure.yml">
-        <code>enable-backup-restore-azure.yml</code></a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      A GCS external blobstore. For instructions, see <a href="external-blobstores.html#gcs">Backup and Restore with External Blobstores</a>.
-    </td>
-    <td>
-      <code>use-gcs-blobstore.yml</code>
-    </td>
-    <td>
-      <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-gcs.yml">
-        <code>enable-backup-restore-gcs.yml</code></a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      A <a href="#supported-external-databases">supported external database</a>
-    </td>
-    <td>
-      <code>use-external-dbs.yml</code>
-    </td>
-    <td>
-      No BBR ops file required
-    </td>
-  </tr>
-  <tr>
-    <td>
-      An NFS broker and volume driver for volume support
-    </td>
-    <td>
-      <code>enable-nfs-volume-service.yml</code>
-    </td>
-    <td>
-      <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-nfs-broker.yml">
-      <code>enable-backup-restore-nfs-broker.yml</code></a>
-    </td>
-  </tr>
-</table>
-
-BBR can communicate with external blobstores and databases over TLS if they are configured accordingly.
+To enable BBR backup and restore for different configurations you must also use the appropriate backup and restore ops files. For information on the available backup and restore ops files, see [cf-deployment](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore).
 
 ### <a id='supported-external-databases'></a>Supported External Databases
 
