add missing comma; PR65

--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -36,7 +36,7 @@ enables BBR backup and restore for default CF components, including the internal
 
 When using the default configuration, all apps return to a running state after a restore.
 
-To enable BBR backup and restore for different configurations you must also use the appropriate backup and restore ops files.
+To enable BBR backup and restore for different configurations, you must also use the appropriate backup and restore ops files.
 For information about the available backup and restore ops files, see the
 [cf-deployment README file](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/README.md) in GitHub.
 
