Add release notes for v1.5.2

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,19 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.5'></a> v1.5.2
+
+**Release Date**: August 29, 2019
+
+#### Features
+
+* Add short version of the `--artifact-path` flag: `-a`.
+
+#### Improvements
+
+* BBR will not log that the backup was successful if it draining fails
+* Bump Golang Crypto and Golang Sys libraries
+
 ### <a id='1.5'></a> v1.5.1
 
 **Release Date**: May 3, 2018
