--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -8,8 +8,8 @@ This guide documents BOSH Backup and Restore (BBR), a framework for backing up a
 ## <a id='overview'></a>Overview
 
 BBR orchestrates triggering the backup or restore process on the BOSH deployment or BOSH Director,
-and transfers the backup artifacts to and from the BOSH deployment or BOSH Director. You should
-frequently backup your deployment using BBR, especially before upgrading a deployment. 
+and transfers the backup artifacts to and from the BOSH deployment or BOSH Director. Cloud Foundry recommends
+that you frequently back up your deployment using BBR, especially before upgrading a deployment.
 
 For more information about installing and using BBR, see the [Installing BOSH Backup and Restore](installing.html), [Backing up with BOSH Backup and Restore](backup.html), and [Restoring with BOSH Backup and Restore](restore.html) topics. Information for release authors and developers is also available in the [BOSH Backup and Restore Developer's Guide](bbr-devguide.html).
 
